Created specific tags for all images and categorized them accordingly. Now all categories of images can be changed in size using only the style sheet. All images now have a max width so larger images shrink accordingly on smaller screens, such as on smartphones.

--- a/projects/cleanroom.html
+++ b/projects/cleanroom.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Cleanroom</h2>
-  <div class="picture">
-    <img src="../images/cleanroom/cleanroom_grayscale.jpg"
-    alt="Cleanroom" width="504" height="378" border="3">
-    <img src="../images/cleanroom/cleanroom_color.jpg" class="img-top"
-    alt="Cleanroom" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/cleanroom/cleanroom_grayscale.jpg" class="header_img"
+    alt="Cleanroom" border="3">
+    <img src="../images/cleanroom/cleanroom_color.jpg" class="header_img-top"
+    alt="Cleanroom" border="3">
   </div>
   <p align="left">
     While I have more in depth experience with using the cleanroom from the
@@ -58,29 +58,29 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     enhanced to enable even smaller feature sizes.
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cleanroom/cleanroom_oxide_grayscale.jpg"
-      alt="Oxide Deposition" width="252" height="189" border="3">
-      <img src="../images/cleanroom/cleanroom_oxide_color.jpg" class="img-top"
-      alt="Oxide Deposition" width="252" height="189" border="3">
+      class="fig_img" alt="Oxide Deposition" border="3">
+      <img src="../images/cleanroom/cleanroom_oxide_color.jpg"
+      class="fig_img-top" alt="Oxide Deposition" border="3">
     </div>
     <figcaption>Oxide Deposition</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cleanroom/cleanroom_etching_grayscale.jpg"
-      alt="Etching" width="252" height="189" border="3">
-      <img src="../images/cleanroom/cleanroom_etching_color.jpg" class="img-top"
-      alt="Etching" width="252" height="189" border="3">
+      class="fig_img" alt="Etching" border="3">
+      <img src="../images/cleanroom/cleanroom_etching_color.jpg"
+      class="fig_img-top" alt="Etching" border="3">
     </div>
     <figcaption>Etching</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cleanroom/cleanroom_nemo_grayscale.jpg"
-      alt="Dielectric Picture" width="252" height="189" border="3">
-      <img src="../images/cleanroom/cleanroom_nemo_color.jpg" class="img-top"
-      alt="Dielectric Picture" width="252" height="189" border="3">
+      class="fig_img" alt="Dielectric Picture" border="3">
+      <img src="../images/cleanroom/cleanroom_nemo_color.jpg"
+      class="fig_img-top" alt="Dielectric Picture" border="3">
     </div>
     <figcaption>Dielectric Picture</figcaption>
   </figure>
