--- a/projects/cookie_cutters.html
+++ b/projects/cookie_cutters.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Cookie Cutters</h2>
-  <div class="picture">
+  <div class="header_img">
     <img src="../images/cookie_cutters/cookie_cutters_grayscale.jpg"
-    alt="Cookie Cutters" width="504" height="378" border="3">
-    <img src="../images/cookie_cutters/cookie_cutters_color.jpg" class="img-top"
-    alt="Cookie Cutters" width="504" height="378" border="3">
+    class="header_img" alt="Cookie Cutters" border="3">
+    <img src="../images/cookie_cutters/cookie_cutters_color.jpg"
+    class="header_img-top" alt="Cookie Cutters" border="3">
   </div>
   <p align="left">
     During my first semester at MIT, I took on a personal project to make some
@@ -71,38 +71,38 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     (the BB-8 cookie cutter was created by my supervisor, Dan Novy).
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cookie_cutters/cookie_cutters_cad_model_grayscale.PNG"
-      alt="CAD Model" width="252" height="189" border="3">
+      class="fig_img" alt="CAD Model" border="3">
       <img src="../images/cookie_cutters/cookie_cutters_cad_model_color.PNG"
-      class="img-top" alt="CAD Model" width="252" height="189" border="3">
+      class="fig_img-top" alt="CAD Model" border="3">
     </div>
     <figcaption>CAD Model</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cookie_cutters/cookie_cutters_cut_grayscale.jpg"
-      alt="Cut Dough" width="252" height="189" border="3">
+      class="fig_img" alt="Cut Dough" border="3">
       <img src="../images/cookie_cutters/cookie_cutters_cut_color.jpg"
-      class="img-top" alt="Cut Dough" width="252" height="189" border="3">
+      class="fig_img-top" alt="Cut Dough" border="3">
     </div>
     <figcaption>Cut Dough</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cookie_cutters/cookie_cutters_cooked_grayscale.jpg"
-      alt="Baked Cookies" width="252" height="189" border="3">
+      class="fig_img" alt="Baked Cookies" border="3">
       <img src="../images/cookie_cutters/cookie_cutters_cooked_color.jpg"
-      class="img-top" alt="Baked Cookies" width="252" height="189" border="3">
+      class="fig_img-top" alt="Baked Cookies" border="3">
     </div>
     <figcaption>Baked Cookies</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/cookie_cutters/cookie_cutters_frosted_grayscale.jpg"
-      alt="Frosted Cookies" width="252" height="189" border="3">
+      class="fig_img" alt="Frosted Cookies" border="3">
       <img src="../images/cookie_cutters/cookie_cutters_frosted_color.jpg"
-      class="img-top" alt="Frosted Cookies" width="252" height="189" border="3">
+      class="fig_img-top" alt="Frosted Cookies" border="3">
     </div>
     <figcaption>Frosted Cookies</figcaption>
   </figure>
