--- a/projects/hologif.html
+++ b/projects/hologif.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>HoloGIF</h2>
-  <div class="picture">
-    <img src="../images/hologif/hologif_grayscale.jpg" alt="HoloGIF"
-    width="504" height="378" border="3">
-    <img src="../images/hologif/hologif_color.jpg" class="img-top"
-    alt="HoloGIF" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/hologif/hologif_grayscale.jpg" class="header_img"
+    alt="HoloGIF" border="3">
+    <img src="../images/hologif/hologif_color.jpg" class="header_img-top"
+    alt="HoloGIF" border="3">
   </div>
   <p align="left">
     During my first semester at MIT, I took a class called "Sci Fab: Science
@@ -76,38 +76,38 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     href="https://scifab.pubpub.org/pub/7o3ww6xz">Sci Fab 2019 website</a>.
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/hologif/hologif_exposure_grayscale.jpg"
-      alt="Hologram Exposure Set Up" width="252" height="189" border="3">
-      <img src="../images/hologif/hologif_exposure_color.jpg" class="img-top"
-      alt="Hologram Exposure Set Up" width="252" height="189" border="3">
+      class="fig_img" alt="Hologram Exposure Set Up" border="3">
+      <img src="../images/hologif/hologif_exposure_color.jpg"
+      class="fig_img-top" alt="Hologram Exposure Set Up" border="3">
     </div>
     <figcaption>Hologram Exposure Set Up</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/hologif/hologif_stop_motion_grayscale.jpg"
-      alt="Stop Motion Hologram Frames" width="252" height="189" border="3">
-      <img src="../images/hologif/hologif_stop_motion_color.jpg" class="img-top"
-      alt="Stop Motion Hologram Frames" width="252" height="189" border="3">
+      class="fig_img" alt="Stop Motion Hologram Frames" border="3">
+      <img src="../images/hologif/hologif_stop_motion_color.jpg"
+      class="fig_img-top" alt="Stop Motion Hologram Frames" border="3">
     </div>
     <figcaption>Stop Motion Hologram Frames</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/hologif/hologif_cad_model_grayscale.jpg"
-      alt="HoloGIF CAD Model" width="252" height="189" border="3">
-      <img src="../images/hologif/hologif_cad_model_color.jpg" class="img-top"
-      alt="HoloGIF CAD Model" width="252" height="189" border="3">
+      class="fig_img" alt="HoloGIF CAD Model" border="3">
+      <img src="../images/hologif/hologif_cad_model_color.jpg"
+      class="fig_img-top" alt="HoloGIF CAD Model" border="3">
     </div>
     <figcaption>HoloGIF CAD Model</figcaption>
   </figure>
   <figure>
-    <div class="picture">
-      <img src="../images/hologif/hologif_circuit_grayscale.jpg"
-      alt="Strobe Light Circuit" width="252" height="189" border="3">
-      <img src="../images/hologif/hologif_circuit_color.jpg" class="img-top"
-      alt="Strobe Light Circuit" width="252" height="189" border="3">
+    <div class="fig_img">
+      <img src="../images/hologif/hologif_circuit_grayscale.jpg" class="fig_img"
+      alt="Strobe Light Circuit" border="3">
+      <img src="../images/hologif/hologif_circuit_color.jpg" class="fig_img-top"
+      alt="Strobe Light Circuit" border="3">
     </div>
     <figcaption>Strobe Light Circuit</figcaption>
   </figure>
