--- a/projects/holograms.html
+++ b/projects/holograms.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Holograms</h2>
-  <div class="picture">
-    <img src="../images/holograms/holograms_grayscale.jpg"
-    alt="Holograms" width="504" height="378" border="3">
-    <img src="../images/holograms/holograms_color.jpg" class="img-top"
-    alt="Holograms" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/holograms/holograms_grayscale.jpg" class="header_img"
+    alt="Holograms" border="3">
+    <img src="../images/holograms/holograms_color.jpg" class="header_img-top"
+    alt="Holograms" border="3">
   </div>
   <p align="left">
     My initial exposure to holography was when I joined the Electro-Holography
@@ -65,38 +65,38 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     the front lines of this technology.
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holograms/holograms_quarters_grayscale.jpg"
-      alt="Quarters" width="252" height="189" border="3">
-      <img src="../images/holograms/holograms_quarters_color.jpg" class="img-top"
-      alt="Quarters" width="252" height="189" border="3">
+      class="fig_img" alt="Quarters" border="3">
+      <img src="../images/holograms/holograms_quarters_color.jpg"
+      class="fig_img-top" alt="Quarters" border="3">
     </div>
     <figcaption>Quarters</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holograms/holograms_helmets_grayscale.jpg"
-      alt="Stormtrooper Helmets" width="252" height="189" border="3">
-      <img src="../images/holograms/holograms_helmets_color.jpg" class="img-top"
-      alt="Stormtrooper Helmets" width="252" height="189" border="3">
+      class="fig_img" alt="Stormtrooper Helmets" border="3">
+      <img src="../images/holograms/holograms_helmets_color.jpg"
+      class="fig_img-top" alt="Stormtrooper Helmets" border="3">
     </div>
     <figcaption>Stormtrooper Helmets</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holograms/holograms_ring_grayscale.jpg"
-      alt="MIT Class Ring" width="252" height="189" border="3">
-      <img src="../images/holograms/holograms_ring_color.jpg" class="img-top"
-      alt="MIT Class Ring" width="252" height="189" border="3">
+      class="fig_img" alt="MIT Class Ring" border="3">
+      <img src="../images/holograms/holograms_ring_color.jpg"
+      class="fig_img-top" alt="MIT Class Ring" border="3">
     </div>
     <figcaption>MIT Class Ring</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holograms/holograms_lens_grayscale.jpg"
-      alt="Lens Over Chain" width="252" height="189" border="3">
-      <img src="../images/holograms/holograms_lens_color.jpg" class="img-top"
-      alt="Lens Over Chain" width="252" height="189" border="3">
+      class="fig_img" alt="Lens Over Chain" border="3">
+      <img src="../images/holograms/holograms_lens_color.jpg"
+      class="fig_img-top" alt="Lens Over Chain" border="3">
     </div>
     <figcaption>Lens Over Chain</figcaption>
   </figure>
