--- a/projects/holovideo.html
+++ b/projects/holovideo.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Holographic Video Monitor</h2>
-  <div class="picture">
-    <img src="../images/holovideo/holovideo_grayscale.png"
-    alt="Holographic Video Monitor" width="504" height="378" border="3">
-    <img src="../images/holovideo/holovideo_color.png" class="img-top"
-    alt="Holographic Video Monitor" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/holovideo/holovideo_grayscale.png" class="header_img"
+    alt="Holographic Video Monitor" border="3">
+    <img src="../images/holovideo/holovideo_color.png" class="header_img-top"
+    alt="Holographic Video Monitor" border="3">
   </div>
   <p align="left">
     At the beginning of my sophomore year at BYU, I had the opportunity to join
@@ -67,39 +67,38 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     holographic display and other forms of 3D display technologies progresses.
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holovideo/holovideo_gratings_grayscale.jpg"
-      alt="Grating Test" width="252" height="189" border="3">
+      class="fig_img" alt="Grating Test" border="3">
       <img src="../images/holovideo/holovideo_gratings_color.jpg"
-      class="img-top" alt="Grating Test" width="252" height="189" border="3">
+      class="fig_img-top" alt="Grating Test" border="3">
     </div>
     <figcaption>Grating Test</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holovideo/holovideo_transducers_grayscale.jpg"
-      alt="Transducers" width="252" height="189" border="3">
+      class="fig_img" alt="Transducers" border="3">
       <img src="../images/holovideo/holovideo_transducers_color.jpg"
-      class="img-top" alt="Transducers" width="252" height="189" border="3">
+      class="fig_img-top" alt="Transducers" border="3">
     </div>
     <figcaption>Transducers</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holovideo/holovideo_holochip_grayscale.jpg"
-      alt="HoloChip" width="252" height="189" border="3">
+      class="fig_img" alt="HoloChip" border="3">
       <img src="../images/holovideo/holovideo_holochip_color.jpg"
-      class="img-top" alt="HoloChip" width="252" height="189" border="3">
+      class="fig_img-top" alt="HoloChip" border="3">
     </div>
     <figcaption>HoloChip</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/holovideo/holovideo_aligning_grayscale.jpg"
-      alt="Aligning the Device" width="252" height="189" border="3">
+      class="fig_img" alt="Aligning the Device" border="3">
       <img src="../images/holovideo/holovideo_aligning_color.jpg"
-      class="img-top" alt="Aligning the Device" width="252" height="189"
-      border="3">
+      class="fig_img-top" alt="Aligning the Device" border="3">
     </div>
     <figcaption>Aligning the Device</figcaption>
   </figure>
