--- a/projects/laser_tag.html
+++ b/projects/laser_tag.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Laser Tag</h2>
-  <div class="picture">
-    <img src="../images/laser_tag/laser_tag_grayscale.jpg"
-    alt="Laser Tag" width="504" height="378" border="3">
-    <img src="../images/laser_tag/laser_tag_color.jpg" class="img-top"
-    alt="Laser Tag" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/laser_tag/laser_tag_grayscale.jpg" class="header_img"
+    alt="Laser Tag" border="3">
+    <img src="../images/laser_tag/laser_tag_color.jpg" class="header_img-top"
+    alt="Laser Tag" border="3">
   </div>
   <p align="left">
     During my junior year at BYU, we had a design project that combined the
@@ -66,21 +66,20 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     <strike>cheating</strike> creativity and thinking outside of the box.
   </p>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/laser_tag/laser_tag_squad_grayscale.jpg"
-      alt="The Squad" width="252" height="189" border="3">
-      <img src="../images/laser_tag/laser_tag_squad_color.jpg" class="img-top"
-      alt="The Squad" width="252" height="189" border="3">
+      class="fig_img" alt="The Squad" border="3">
+      <img src="../images/laser_tag/laser_tag_squad_color.jpg"
+      class="fig_img-top" alt="The Squad" border="3">
     </div>
     <figcaption>The Squad</figcaption>
   </figure>
   <figure>
-    <div class="picture">
+    <div class="fig_img">
       <img src="../images/laser_tag/laser_tag_cheating_grayscale.jpg"
-      alt="Creativity, Not Cheating" width="252" height="189" border="3">
+      class="fig_img" alt="Creativity, Not Cheating" border="3">
       <img src="../images/laser_tag/laser_tag_cheating_color.jpg"
-      class="img-top" alt="Creativity, Not Cheating" width="252" height="189"
-      border="3">
+      class="fig_img-top" alt="Creativity, Not Cheating" border="3">
     </div>
     <figcaption><strike>Cheating</strike> Creativity</figcaption>
   </figure>
