--- a/projects/soc_design.html
+++ b/projects/soc_design.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>SoC Design</h2>
-  <div class="picture">
-    <img src="../images/soc_design/soc_design_grayscale.png"
-    alt="SoC Design" width="504" height="378" border="3">
-    <img src="../images/soc_design/soc_design_color.png" class="img-top"
-    alt="SoC Design" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/soc_design/soc_design_grayscale.png" class="header_img"
+    alt="SoC Design" border="3">
+    <img src="../images/soc_design/soc_design_color.png" class="header_img-top"
+    alt="SoC Design" border="3">
   </div>
   <p align="left">
     Between my junior and senior year at BYU, I had the chance to intern with
