--- a/projects/stereo_system.html
+++ b/projects/stereo_system.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Stereo System</h2>
-  <div class="picture">
+  <div class="header_img">
     <img src="../images/stereo_system/stereo_system_grayscale.jpg"
-    alt="Stereo System" width="504" height="378" border="3">
-    <img src="../images/stereo_system/stereo_system_color.jpg" class="img-top"
-    alt="Stereo System" width="504" height="378" border="3">
+    class="header_img" alt="Stereo System" border="3">
+    <img src="../images/stereo_system/stereo_system_color.jpg"
+    class="header_img-top" alt="Stereo System" border="3">
   </div>
   <p align="left">
     During my sophomore year at BYU, I learned basic skills in electronic
