--- a/projects/whirlybird.html
+++ b/projects/whirlybird.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Whirlybird</h2>
-  <div class="picture">
-    <img src="../images/whirlybird/whirlybird_grayscale.PNG"
-    alt="Whirlybird" width="504" height="378" border="3">
-    <img src="../images/whirlybird/whirlybird_color.PNG" class="img-top"
-    alt="Whirlybird" width="504" height="378" border="3">
+  <div class="header_img">
+    <img src="../images/whirlybird/whirlybird_grayscale.PNG" class="header_img"
+    alt="Whirlybird" border="3">
+    <img src="../images/whirlybird/whirlybird_color.PNG" class="header_img-top"
+    alt="Whirlybird" border="3">
   </div>
   <p align="left">
     As a senior tech elective class at BYU, I took a course on Control Systems.
