--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 <div class="content">
   <h1>Hello there!</h1>
   <h2>My name is Justin B. Christensen.</h2>
-  <div class="picture">
-    <img src="images/jbc_headshot_grayscale.jpg" alt="Portrait of Justin"
-    width="400" height="400" border="3">
-    <img src="images/jbc_headshot_color.jpg" class="img-top" alt="Portrait of
-    Justin" width="400" height="400" border="3">
+  <div class="portrait">
+    <img src="images/jbc_headshot_grayscale.jpg" class="portrait"
+    alt="Portrait of Justin" border="3">
+    <img src="images/jbc_headshot_color.jpg" class="portrait-top"
+    alt="Portrait of Justin" border="3">
   </div>
   <p>I am a Masters student at the MIT Media Lab.</p>
   <p>I explore holography and other 3D display technologies.</p>
@@ -72,45 +72,44 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <h2>Projects</h2>
   <figure>
     <a id="dark_link" href="./projects/hologif.html">
-      <div class="picture">
-        <img src="images/hologif/hologif_grayscale.jpg" alt="HoloGIF"
-        width="252" height="189" border="3">
-        <img src="images/hologif/hologif_color.jpg" class="img-top"
-        alt="HoloGIF" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/hologif/hologif_grayscale.jpg" class ="fig_img"
+        alt="HoloGIF" border="3">
+        <img src="images/hologif/hologif_color.jpg" class="fig_img-top"
+        alt="HoloGIF" border="3">
       </div>
     </a>
     <figcaption>HoloGIF</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/holograms.html">
-      <div class="picture">
-        <img src="images/holograms/holograms_grayscale.jpg" alt="Holograms"
-        width="252" height="189" border="3">
-        <img src="images/holograms/holograms_color.jpg" class="img-top"
-        alt="Holograms" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/holograms/holograms_grayscale.jpg" class="fig_img"
+        alt="Holograms" border="3">
+        <img src="images/holograms/holograms_color.jpg" class="fig_img-top"
+        alt="Holograms" border="3">
       </div>
     </a>
     <figcaption>Holograms</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/cookie_cutters.html">
-      <div class="picture">
+      <div class="fig_img">
         <img src="images/cookie_cutters/cookie_cutters_grayscale.jpg"
-        alt="Cookie Cutters" width="252" height="189" border="3">
+        class="fig_img" alt="Cookie Cutters" border="3">
         <img src="images/cookie_cutters/cookie_cutters_color.jpg"
-        class="img-top" alt="Cookie Cutters" width="252" height="189"
-        border="3">
+        class="fig_img-top" alt="Cookie Cutters" border="3">
       </div>
     </a>
     <figcaption>Cookie Cutters</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/holovideo.html">
-      <div class="picture">
-        <img src="images/holovideo/holovideo_grayscale.png"
-        alt="Holographic Video Monitor" width="252" height="189" border="3">
-        <img src="images/holovideo/holovideo_color.png" class="img-top"
-        alt="Holographic Video Monitor" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/holovideo/holovideo_grayscale.png" class="fig_img"
+        alt="Holographic Video Monitor" border="3">
+        <img src="images/holovideo/holovideo_color.png" class="fig_img-top"
+        alt="Holographic Video Monitor" border="3">
       </div>
     </a>
     <figcaption>Holographic Video Monitor</figcaption>
@@ -118,11 +117,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 <!--
   <figure>
     <a id="dark_link" href="./projects/fiber_optics.html">
-      <div class="picture">
+      <div class="fig_img">
         <img src="images/fiber_optics/fiber_optics_grayscale.jpg"
-        alt="Fiber Optics" width="252" height="189" border="3">
-        <img src="images/fiber_optics/fiber_optics_color.jpg" class="img-top"
-        alt="Fiber Optics" width="252" height="189" border="3">
+        class="fig_img" alt="Fiber Optics" border="3">
+        <img src="images/fiber_optics/fiber_optics_color.jpg"
+        class="fig_img-top" alt="Fiber Optics" border="3">
       </div>
     </a>
     <figcaption>Fiber Optics</figcaption>
@@ -130,55 +129,55 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 -->
   <figure>
     <a id="dark_link" href="./projects/whirlybird.html">
-      <div class="picture">
-        <img src="images/whirlybird/whirlybird_grayscale.PNG"
-        alt="Whirlybird" width="252" height="189" border="3">
-        <img src="images/whirlybird/whirlybird_color.PNG" class="img-top"
-        alt="Whirlybird" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/whirlybird/whirlybird_grayscale.PNG" class="fig_img"
+        alt="Whirlybird" border="3">
+        <img src="images/whirlybird/whirlybird_color.PNG" class="fig_img-top"
+        alt="Whirlybird" border="3">
       </div>
     </a>
     <figcaption>Whirlybird</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/soc_design.html">
-      <div class="picture">
-        <img src="images/soc_design/soc_design_grayscale.png"
-        alt="SoC Design" width="252" height="189" border="3">
-        <img src="images/soc_design/soc_design_color.png" class="img-top"
-        alt="SoC Design" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/soc_design/soc_design_grayscale.png" class="fig_img"
+        alt="SoC Design" border="3">
+        <img src="images/soc_design/soc_design_color.png" class="fig_img-top"
+        alt="SoC Design" border="3">
       </div>
     </a>
     <figcaption>SoC Design</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/cleanroom.html">
-      <div class="picture">
-        <img src="images/cleanroom/cleanroom_grayscale.jpg"
-        alt="Cleanroom" width="252" height="189" border="3">
-        <img src="images/cleanroom/cleanroom_color.jpg" class="img-top"
-        alt="Cleanroom" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/cleanroom/cleanroom_grayscale.jpg" class="fig_img"
+        alt="Cleanroom" border="3">
+        <img src="images/cleanroom/cleanroom_color.jpg" class="fig_img-top"
+        alt="Cleanroom" border="3">
       </div>
     </a>
     <figcaption>Cleanroom</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/laser_tag.html">
-      <div class="picture">
-        <img src="images/laser_tag/laser_tag_grayscale.jpg" alt="Laser Tag"
-        width="252" height="189" border="3">
-        <img src="images/laser_tag/laser_tag_color.jpg" class="img-top"
-        alt="Laser Tag" width="252" height="189" border="3">
+      <div class="fig_img">
+        <img src="images/laser_tag/laser_tag_grayscale.jpg" class="fig_img"
+        alt="Laser Tag" border="3">
+        <img src="images/laser_tag/laser_tag_color.jpg" class="fig_img-top"
+        alt="Laser Tag" border="3">
       </div>
     </a>
     <figcaption>Laser Tag</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/stereo_system.html">
-      <div class="picture">
+      <div class="fig_img">
         <img src="images/stereo_system/stereo_system_grayscale.jpg"
-        alt="Stereo System" width="252" height="189" border="3">
-        <img src="images/stereo_system/stereo_system_color.jpg" class="img-top"
-        alt="Stereo System" width="252" height="189" border="3">
+        class="fig_img" alt="Stereo System" border="3">
+        <img src="images/stereo_system/stereo_system_color.jpg"
+        class="fig_img-top" alt="Stereo System" border="3">
       </div>
     </a>
     <figcaption>Stereo System</figcaption>
