--- a/projects/fiber_optics.html
+++ b/projects/fiber_optics.html
@@ -22,11 +22,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 
 <div class="content">
   <h2>Fiber Optics</h2>
-  <div class="picture">
+  <div class="header_img">
     <img src="../images/fiber_optics/fiber_optics_grayscale.jpg"
-    alt="Fiber Optics" width="504" height="378" border="3">
-    <img src="../images/fiber_optics/fiber_optics_color.jpg" class="img-top"
-    alt="Fiber Optics" width="504" height="378" border="3">
+    class="header_img" alt="Fiber Optics" border="3">
+    <img src="../images/fiber_optics/fiber_optics_color.jpg"
+    class="header_img-top" alt="Fiber Optics" border="3">
   </div>
   <p align="left">
     During my senior year at BYU, I was on a Capstone team with five other
