--- a/projects/fiber_optics.html
+++ b/projects/fiber_optics.html
@@ -15,8 +15,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
 <a class="anchor" id="top"></a>
 <div class="topnav">
   <a id="button_blue" href="../index.html#contact">Contact</a>
-  <a id="button_green" href="../index.html#projects">Projects</a>
-  <a id="button_yellow" href="../index.html#about">About Me</a>
+  <a id="button_green" href="../index.html#about">About Me</a>
+  <a id="button_yellow" href="../index.html#projects">Projects</a>
   <a id="button_red" href="../index.html#top">Home</a>
 </div>
 
