Added 1D Interface and Mathematical Modeling projects. Rewrote About Me section focusing on present, past, and future. Updated resume current as of Feb. 15, 2020. Added links to class websites for their respective projects.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,68 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     <img src="images/jbc_headshot_color.jpg" class="portrait-top"
     alt="Portrait of Justin" border="3">
   </div>
-  <p>I am a Masters student at the MIT Media Lab.</p>
-  <p>I explore holography and other 3D display technologies.</p>
-  <p>I am a fabricator, perfectionist, and (lowercase "i") imagineer.</p>
+  <p>I am a Master's student at the MIT Media Lab.</p>
+  <p>I create interactive and immersive displays and experiences.</p>
+  <p>I am a designer, maker, perfectionist, and (lowercase "i") imagineer.</p>
 
   <a class="anchor" id="projects"></a>
   <hr>
   <h2>Projects</h2>
+  <figure>
+    <a id="dark_link" href="./projects/1D_interface.html">
+      <div class="fig_img">
+        <img src="images/1D_interface/1D_interface_grayscale.jpg" class ="fig_img"
+        alt="1D Interface" border="3">
+        <img src="images/1D_interface/1D_interface_color.jpg" class="fig_img-top"
+        alt="1D Interface" border="3">
+      </div>
+    </a>
+    <figcaption>1D Interface</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/math_modeling.html">
+      <div class="fig_img">
+        <img src="images/math_modeling/math_modeling_grayscale.PNG" class ="fig_img"
+        alt="Mathematical Modeling" border="3">
+        <img src="images/math_modeling/math_modeling_color.PNG" class="fig_img-top"
+        alt="Mathematical Modeling" border="3">
+      </div>
+    </a>
+    <figcaption>Mathematical Modeling</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/laser_tag.html">
+      <div class="fig_img">
+        <img src="images/laser_tag/laser_tag_grayscale.jpg" class="fig_img"
+        alt="Laser Tag" border="3">
+        <img src="images/laser_tag/laser_tag_color.jpg" class="fig_img-top"
+        alt="Laser Tag" border="3">
+      </div>
+    </a>
+    <figcaption>Laser Tag</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/soc_design.html">
+      <div class="fig_img">
+        <img src="images/soc_design/soc_design_grayscale.png" class="fig_img"
+        alt="SoC Design" border="3">
+        <img src="images/soc_design/soc_design_color.png" class="fig_img-top"
+        alt="SoC Design" border="3">
+      </div>
+    </a>
+    <figcaption>SoC Design</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/whirlybird.html">
+      <div class="fig_img">
+        <img src="images/whirlybird/whirlybird_grayscale.PNG" class="fig_img"
+        alt="Whirlybird" border="3">
+        <img src="images/whirlybird/whirlybird_color.PNG" class="fig_img-top"
+        alt="Whirlybird" border="3">
+      </div>
+    </a>
+    <figcaption>Whirlybird</figcaption>
+  </figure>
   <figure>
     <a id="dark_link" href="./projects/hologif.html">
       <div class="fig_img">
@@ -46,28 +101,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       </div>
     </a>
     <figcaption>HoloGIF</figcaption>
-  </figure>
-  <figure>
-    <a id="dark_link" href="./projects/holograms.html">
-      <div class="fig_img">
-        <img src="images/holograms/holograms_grayscale.jpg" class="fig_img"
-        alt="Holograms" border="3">
-        <img src="images/holograms/holograms_color.jpg" class="fig_img-top"
-        alt="Holograms" border="3">
-      </div>
-    </a>
-    <figcaption>Holograms</figcaption>
-  </figure>
-  <figure>
-    <a id="dark_link" href="./projects/cookie_cutters.html">
-      <div class="fig_img">
-        <img src="images/cookie_cutters/cookie_cutters_grayscale.jpg"
-        class="fig_img" alt="Cookie Cutters" border="3">
-        <img src="images/cookie_cutters/cookie_cutters_color.jpg"
-        class="fig_img-top" alt="Cookie Cutters" border="3">
-      </div>
-    </a>
-    <figcaption>Cookie Cutters</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/holovideo.html">
@@ -92,28 +125,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     <figcaption>Fiber Optics</figcaption>
   </figure>
   <figure>
-    <a id="dark_link" href="./projects/whirlybird.html">
-      <div class="fig_img">
-        <img src="images/whirlybird/whirlybird_grayscale.PNG" class="fig_img"
-        alt="Whirlybird" border="3">
-        <img src="images/whirlybird/whirlybird_color.PNG" class="fig_img-top"
-        alt="Whirlybird" border="3">
-      </div>
-    </a>
-    <figcaption>Whirlybird</figcaption>
-  </figure>
-  <figure>
-    <a id="dark_link" href="./projects/soc_design.html">
-      <div class="fig_img">
-        <img src="images/soc_design/soc_design_grayscale.png" class="fig_img"
-        alt="SoC Design" border="3">
-        <img src="images/soc_design/soc_design_color.png" class="fig_img-top"
-        alt="SoC Design" border="3">
-      </div>
-    </a>
-    <figcaption>SoC Design</figcaption>
-  </figure>
-  <figure>
     <a id="dark_link" href="./projects/cleanroom.html">
       <div class="fig_img">
         <img src="images/cleanroom/cleanroom_grayscale.jpg" class="fig_img"
@@ -123,17 +134,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       </div>
     </a>
     <figcaption>Cleanroom</figcaption>
-  </figure>
-  <figure>
-    <a id="dark_link" href="./projects/laser_tag.html">
-      <div class="fig_img">
-        <img src="images/laser_tag/laser_tag_grayscale.jpg" class="fig_img"
-        alt="Laser Tag" border="3">
-        <img src="images/laser_tag/laser_tag_color.jpg" class="fig_img-top"
-        alt="Laser Tag" border="3">
-      </div>
-    </a>
-    <figcaption>Laser Tag</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/stereo_system.html">
@@ -146,39 +146,67 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     </a>
     <figcaption>Stereo System</figcaption>
   </figure>
+  <figure>
+    <a id="dark_link" href="./projects/holograms.html">
+      <div class="fig_img">
+        <img src="images/holograms/holograms_grayscale.jpg" class="fig_img"
+        alt="Holograms" border="3">
+        <img src="images/holograms/holograms_color.jpg" class="fig_img-top"
+        alt="Holograms" border="3">
+      </div>
+    </a>
+    <figcaption>Holograms</figcaption>
+  </figure>
+  <figure>
+    <a id="dark_link" href="./projects/cookie_cutters.html">
+      <div class="fig_img">
+        <img src="images/cookie_cutters/cookie_cutters_grayscale.jpg"
+        class="fig_img" alt="Cookie Cutters" border="3">
+        <img src="images/cookie_cutters/cookie_cutters_color.jpg"
+        class="fig_img-top" alt="Cookie Cutters" border="3">
+      </div>
+    </a>
+    <figcaption>Cookie Cutters</figcaption>
+  </figure>
 
   <a class="anchor" id="about"></a>
   <hr>
   <h2>About Me</h2>
   <p align="left">
-    I was born and raised in Ogden, Utah. After high school and serving a
-    full-time two-year mission for my church (The Church of Jesus Christ of
-    Latter-day Saints) in the Tokyo, Japan area, I started studying electrical
-    engineering at Brigham Young University (BYU) in Provo, Utah. There, I
-    discovered my passion for holography and other forms of 3D display
-    technology. This led me to pursue doing research at the MIT Media Lab, where
-    many breakthroughs have been made in that field.
+    I am a Master's student studying and researching at the MIT Media Lab in
+    Cambridge, MA. I combine my skills in optics, hardware, and software to
+    create immersive and interactive experiences. I explore holography and other
+    forms of 3D display technology to make things come to life in a way not
+    before possible. I also design and fabricate opto-mechanical systems using
+    simple structural, flexural, and actuating building blocks. I collaborate
+    with other students to make designs, systems, and devices that will change
+    and impact the world for the better. I am constantly being introduced to new
+    people and ideas that I will continue to work with to create, improve, and
+    invent new things.
   </p>
   <p align="left">
-    I now live in Cambridge, Massachusetts as a full-time student/research
-    assistant with my sweet wife, Kayla, and our two-year-old daughter, Lia.
-    When I am not studying or doing research, I love to spend as much time with
-    my family as possible. We love to watch movies, play games, and go on walks
-    together. I am an avid sports fan (go Jazz!), nerd culture enthusiast (Star
-    Wars and MCU expert), and video game lover (grew up with PlayStation, and am
-    now also a Nintendo follower). I also love to be outdoors taking a hike,
-    going camping or hunting, or just looking at the beautiful world that
-    surrounds us.
+    Before coming to MIT, I obtained a Bachelor's degree in electrical
+    engineering from Brigham Young University in Provo, UT. There, I developed
+    skills in embedded and object oriented programming, electronics design, as
+    well as optical engineering. I did research under Daniel Smalley in the
+    Electro-Holography Lab where I designed and fabricated acousto-optic spatial
+    light modulators in the cleanroom to be used in the holographic video
+    monitor. I was also exposed to other forms of 3D display technologies, such
+    as the photo-phoretic trap volumetric display. These experiences ignited my
+    desire to continue pursuing these and other passions at MIT.
   </p>
   <p align="left">
-    I want to discover new ways to use holography and other 3D display
-    technologies to create immersive and interactive experiences for people. I
-    want to push the boundaries of what those technologies currently offer to
-    make something amazing. I want others to see how cool these technologies
-    truly are and how they might be implemented. I want these technologies to be
-    accessible so more people can try them out and create new things with them.
-    Mostly, I just want to keep making the world a better place, in whatever way
-    I can.
+    As I continue on in my research, I hope to continue to discover new ways to
+    implement holography and other 3D display technologies and push the
+    boundaires of their capabilities. I want to spread my enthusiasm for these
+    technologies to many people around the world so that they, too, may join me
+    in my efforts. I want to utilize my knowledge of these technogies along with
+    my skills in programming, electronics, fabrication, and design to make more
+    immersive and interactive experiences and enable new levels and types of
+    storytelling. Industries that I believe can enable me to make these dreams
+    come true vary, but I am very interested in working in the entertainment
+    industry, especially in the realm of consumer-facing product design, such as
+    consumer electronics, games, and theme park attractions.
   </p>
 
   <a class="anchor" id="contact"></a>
