--- a/projects/hologif.html
+++ b/projects/hologif.html
@@ -29,17 +29,19 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     alt="HoloGIF" border="3">
   </div>
   <p align="left">
-    During my first semester at MIT, I took a class called "Sci Fab: Science
-    Fiction Inspired Envisioneering and Futurecrafting" where we developed our
-    own science fiction worlds and then created an artifact derived from that
-    world. This class taught me how to think more creatively and how to
-    effectively manifest those creative thoughts into words, drawings, and even
-    a working prototype. The artifact prototyping process itself gave me some
-    good experience with time management on a project that didn't already have
-    the instructions laid out for it.
+    During my first semester at MIT, I took a class called "<a id="dark_link"
+    target="_blank" href="https://scifab.pubpub.org/">Sci Fab: Science Fiction
+    Inspired Envisioneering and Futurecrafting</a>" where we developed our own
+    science fiction worlds and then created an artifact derived from that world.
+    This class taught me how to think more creatively and how to effectively
+    manifest those creative thoughts into words, drawings, and a working
+    prototype. The artifact prototyping process itself gave me some good
+    experience with time management on a project that didn't already have the
+    instructions laid out for it.
   </p>
   <p align="left">
-    My science fiction world I created was set in the year 2060, but there are
+    <a id="dark_link" target="_blank" href="https://scifab.pubpub.org/pub/ryl9rxi3">
+    My science fiction world</a> I created was set in the year 2060, but there are
     various groups of "neo-Amish" who have been "left behind" by technology. The
     artifact I present is an attempt at a low-cost holographic video display
     using fairly common and accessible materials. It is similar to a zoetrope (a
@@ -72,8 +74,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     circuit. It even borrowed some film techniques for choosing the proper
     amount of frames, and how the object should be moved for the stop-motion
     like hologram exposures. For more direct information on the build process of
-    this project, see my page from the <a id="dark_link" target="_blank"
-    href="https://scifab.pubpub.org/pub/7o3ww6xz">Sci Fab 2019 website</a>.
+    this project, see <a id="dark_link" target="_blank"
+    href="https://scifab.pubpub.org/pub/7o3ww6xz">my page from the Sci Fab 2019
+    website</a>.
   </p>
   <figure>
     <div class="fig_img">
