Uploading Counting Colors

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <a class="anchor" id="projects"></a>
   <hr>
   <h2>Projects</h2>
+<!--
   <figure>
     <a id="dark_link" href="./projects/1D_interface.html">
       <div class="fig_img">
@@ -46,6 +47,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
       </div>
     </a>
     <figcaption>1D Interface</figcaption>
+  </figure>
+-->
+  <figure>
+    <a id="dark_link" href="./projects/counting_colors.html">
+      <div class="fig_img">
+        <img src="images/counting_colors/counting_colors_grayscale.JPG" class ="fig_img"
+        alt="Counting Colors" border="3">
+        <img src="images/counting_colors/counting_colors_color.JPG" class="fig_img-top"
+        alt="Counting Colors" border="3">
+      </div>
+    </a>
+    <figcaption>Counting Colors</figcaption>
   </figure>
   <figure>
     <a id="dark_link" href="./projects/math_modeling.html">
