--- a/projects/counting_colors.html
+++ b/projects/counting_colors.html
@@ -67,7 +67,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <p align="left">
     For a more complete look at my design and protoyping process, click <a
     id="dark_link" href="../assets/Counting_Colors.pdf" target="_blank">here</a>.
-    Here is a video of the game in action:
+    Also, the code and files for the project can be found <a id="dark_link"
+    href="https://github.com/jbc1995/countingColors" target="_blank">here</a>.
+    Below is a video of the game in action:
   </p>
   <video width="600" height="auto" controls>
     <source src="../assets/Counting_Colors.mp4" type="video/mp4">
