--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     <img src="images/jbc_headshot_color.jpg" class="portrait-top"
     alt="Portrait of Justin" border="3">
   </div>
+
+<!-- TODO: Update short bio -->
+
   <p>I am a Master's student at the MIT Media Lab.</p>
   <p>I create interactive and immersive displays and experiences.</p>
   <p>I am a designer, maker, perfectionist, and (lowercase "i") imagineer.</p>
@@ -36,6 +39,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <a class="anchor" id="projects"></a>
   <hr>
   <h2>Projects</h2>
+
+<!-- TODO: Add How to Make (almost) Anything class/projects -->
+<!-- TODO: Add Chime In -->
+
   <figure>
     <a id="dark_link" href="./projects/counting_colors.html">
       <div class="fig_img">
@@ -47,6 +54,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
     </a>
     <figcaption>Counting Colors</figcaption>
   </figure>
+
+<!-- TODO: Update NMM page with Final Project and other info -->
+
   <figure>
     <a id="dark_link" href="./projects/math_modeling.html">
       <div class="fig_img">
@@ -172,6 +182,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome
   <a class="anchor" id="about"></a>
   <hr>
   <h2>About Me</h2>
+
+<!-- TODO: Update About Me section -->
+
   <p align="left">
     I am a Master's student studying and researching at the MIT Media Lab in
     Cambridge, MA. I combine my skills in optics, hardware, and software to
